--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -9,9 +9,9 @@
 <style>
 :root {
   --bg: #000000;
-  --fg: #6cff6f;
-  --muted: #3ea43f;
-  --line: #1d1d1d;
+  --fg: #ffffff;
+  --muted: #888888;
+  --line: #2a2a2a;
 }
 body, input, textarea, button, pre {
   font-family: monospace;
@@ -43,7 +43,7 @@ body::after {
 
 /* Fosforo persistente */
 body, input, textarea, button, pre, .theme-option, .icon, .titlebar, .file, .viewer {
-  text-shadow: 0 0 3px rgba(108,255,111,0.4), 0 0 6px rgba(108,255,111,0.25);
+  
 }
 </style>
 </head>
