--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Memoria del Louvre</title>
+  <title>Louvre Memory — Terminale</title>
   <link rel="stylesheet" href="style/main.css">
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 <style>
 :root {
   --bg: #000000;
-  --fg: #ffffff;
+  --fg: #6cff6f;
   --muted: #3ea43f;
   --line: #1d1d1d;
 }
@@ -41,6 +41,10 @@ body::after {
   mix-blend-mode: screen;
 }
 
+/* Fosforo persistente */
+body, input, textarea, button, pre, .theme-option, .icon, .titlebar, .file, .viewer {
+  text-shadow: 0 0 3px rgba(108,255,111,0.4), 0 0 6px rgba(108,255,111,0.25);
+}
 </style>
 </head>
 <body>
@@ -48,10 +52,8 @@ body::after {
 <!-- SCHERMATA TERMINALE INIZIALE -->
 <section id="intro" class="screen terminal">
   <div class="terminal-box">
-    
-    <div class="line">> Ingresso nel sistema di memoria del louvre</div>
-    
-    <div class="line">>Cosa resta del Louvre in te.</div>
+    <div class="line">> Benvenuto nella memoria profonda del Louvre.</div>
+    <div class="line">> Seleziona l'epoca che riconosci come tua.</div>
     <div class="line">&nbsp;</div>
 
     <div id="themeGrid" class="theme-grid-terminal">
@@ -68,13 +70,13 @@ body::after {
       <div class="theme-option" data-value="tema11">[ ] Il Louvre della Piramide</div>
     </div>
 
-    <div class="line">> Firma:</div>
+    <div class="line">> Inserisci la tua firma:</div>
     <input id="visitorName" class="terminal-input" maxlength="40" autocomplete="off">
 
-    <div class="line">> Annota la tua traccia</div>
+    <div class="line">> Scrivi la parte di memoria che riconosci:</div>
     <textarea id="visitorText" class="terminal-input area" rows="5" maxlength="1000"></textarea>
 
-    <button id="submitBtn" class="terminal-btn">Inserisci</button>
+    <button id="submitBtn" class="terminal-btn">CONFERMA</button>
   </div>
 </section>
 
@@ -88,7 +90,7 @@ body::after {
 
 <!-- DESKTOP -->
 <section id="desktop" class="hidden desktop">
-  <div id="topbar">Memoria del Louvre - sistema centrale</div>
+  <div id="topbar">ARCHIVIO COMPLETO DELLA MEMORIA</div>
   <div id="iconGrid"></div>
 </section>
 
@@ -101,7 +103,11 @@ const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 // TEMI
 const EPOCHS = [
   { id: 'tema1',  name: 'Il Louvre Fortezza', files: [ { type:'text', name:'Doc1.txt', src:'media/tema1/tema1.txt' } ] },
-  { id: 'tema2',  name: 'Il Louvre Rinascimentale', files: [ { type:'text', name:'Doc2.txt', src:'media/tema2/tema2.txt' } ] },
+  { id: 'tema2',  name: 'Il Louvre Rinascimentale', files: [ 
+    { type:'text', name:'Doc2.txt', src:'media/tema2/tema2.txt' },
+    { type:'image', name:'img01.jpg', src:'media/tema2/img01.jpg' },
+    { type:'image', name:'img02.jpg', src:'media/tema2/img02.jpg' }
+  ] },
   { id: 'tema3',  name: 'Il Louvre dello Stato Assoluto', files: [ { type:'text', name:'Doc3.txt', src:'media/tema3/tema3.txt' } ] },
   { id: 'tema4',  name: 'Il Louvre Rivoluzionario', files: [ { type:'text', name:'Doc4.txt', src:'media/tema4/tema4.txt' } ] },
   { id: 'tema5',  name: 'Il Louvre Napoleonico', files: [ { type:'text', name:'Doc5.txt', src:'media/tema5/tema5.txt' } ] },
@@ -155,7 +161,7 @@ function showDesktop(){
   EPOCHS.forEach(ep => {
     const icon = document.createElement('div');
     icon.className = 'icon';
-    icon.innerHTML = `<div class="glyph"> </div><div class="name">${ep.name}</div>`;
+    icon.innerHTML = `<div class="glyph">📁</div><div class="name">${ep.name}</div>`;
     icon.onclick = () => openFolder(ep);
     iconGrid.appendChild(icon);
   });
@@ -168,7 +174,7 @@ async function loadAllMemories(){
   data.forEach(mem => {
     const icon = document.createElement('div');
     icon.className = 'icon';
-    icon.innerHTML = `<div class="glyph"> </div><div class="name">ricordo di ${mem.nome}</div>`;
+    icon.innerHTML = `<div class="glyph">📄</div><div class="name">ricordo di ${mem.nome}</div>`;
     icon.onclick = () => openUserMemory(mem);
     iconGrid.appendChild(icon);
   });
@@ -203,9 +209,17 @@ async function openFile(f,viewer){
     const txt = await (await fetch(f.src)).text();
     const pre = document.createElement('pre'); pre.textContent = txt;
     viewer.appendChild(pre);
+  } else if(f.type==='image'){
+    const img = document.createElement('img');
+    img.src = f.src;
+    img.style.maxWidth = '100%';
+    img.style.maxHeight = '100%';
+    img.style.objectFit = 'contain';
+    viewer.appendChild(img);
   } else {
     const v = document.createElement('video'); v.src=f.src; v.controls=true; v.autoplay=true; viewer.appendChild(v);
   }
+}
 }
 
 function openUserMemory(data){
