--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -106,7 +106,12 @@ const EPOCHS = [
   { id: 'tema2',  name: 'Il Louvre Rinascimentale', files: [ 
     { type:'text', name:'Doc2.txt', src:'media/tema2/tema2.txt' },
     { type:'image', name:'img01.jpg', src:'media/tema2/img01.jpg' },
-    { type:'image', name:'img02.jpg', src:'media/tema2/img02.jpg' }
+    { type:'image', name:'img02.jpg', src:'media/tema2/img02.jpg' },
+    { type:'image', name:'img02.jpg', src:'media/tema2/img03.jpg' },
+    { type:'image', name:'img02.jpg', src:'media/tema2/img04.jpg' },
+    { type:'image', name:'img02.jpg', src:'media/tema2/img05.jpg' },
+    { type:'image', name:'img02.jpg', src:'media/tema2/img06.jpg' },
+    { type:'image', name:'img02.jpg', src:'media/tema2/img07.jpg' }
   ] },
   { id: 'tema3',  name: 'Il Louvre dello Stato Assoluto', files: [ { type:'text', name:'Doc3.txt', src:'media/tema3/tema3.txt' } ] },
   { id: 'tema4',  name: 'Il Louvre Rivoluzionario', files: [ { type:'text', name:'Doc4.txt', src:'media/tema4/tema4.txt' } ] },
