--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -104,16 +104,26 @@ const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZ
 const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
 const EPOCHS = [
-  { id: 'tema1',  name: 'Il Louvre Fortezza', files: [ { type:'text', name:'Doc1.txt', src:'media/tema1/tema1.txt' } ] },
+   { id: 'tema1',  name: 'Il louvre fortezza', files: [
+      { type:'text',  name:'Doc1.txt', src:'media/tema1/tema1.txt' },
+      { type:'image', name:'Immagine 1', src:'media/tema1/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema1/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema1/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema1/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema1/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema1/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema1/img07.jpg' }
+  ]},
+  
   { id: 'tema2',  name: 'Il Louvre Rinascimentale', files: [
       { type:'text',  name:'Doc2.txt', src:'media/tema2/tema2.txt' },
       { type:'image', name:'Immagine 1', src:'media/tema2/img01.jpg' },
       { type:'image', name:'Immagine 2', src:'media/tema2/img02.jpg' },
-      { type:'image', name:'Immagine 2', src:'media/tema2/img03.jpg' },
-      { type:'image', name:'Immagine 2', src:'media/tema2/img04.jpg' },
-      { type:'image', name:'Immagine 2', src:'media/tema2/img05.jpg' },
-      { type:'image', name:'Immagine 2', src:'media/tema2/img06.jpg' },
-      { type:'image', name:'Immagine 2', src:'media/tema2/img07.jpg' }
+      { type:'image', name:'Immagine 3', src:'media/tema2/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema2/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema2/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema2/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema2/img07.jpg' }
 
   ]},
   { id: 'tema3',  name: 'Il Louvre dello Stato Assoluto', files: [ { type:'text', name:'Doc3.txt', src:'media/tema3/tema3.txt' } ] },
