--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -125,7 +125,24 @@ const EPOCHS = [
       { type:'image', name:'Immagine 7', src:'media/tema2/img07.jpg' }
 
   ]},
-  { id: 'tema3',  name: 'Il Louvre dello Stato Assoluto', files: [ { type:'text', name:'Doc3.txt', src:'media/tema3/tema3.txt' } ] },
+  
+  { id: 'tema3',  name: 'Il Louvre dello Stato assoluto', files: [
+      { type:'text',  name:'Doc3.txt', src:'media/tema3/tema3.txt' },
+      { type:'image', name:'Immagine 1', src:'media/tema3/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema3/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema3/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema3/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema3/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema3/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema3/img07.jpg' },
+      { type:'image', name:'Immagine 8', src:'media/tema3/img08.jpg' },
+      { type:'image', name:'Immagine 9', src:'media/tema3/img09.jpg' },
+      { type:'image', name:'Immagine 10', src:'media/tema3/img10.jpg' },
+      { type:'image', name:'Immagine 11', src:'media/tema3/img11.jpg' }
+  
+  ]},
+
+  
   { id: 'tema4',  name: 'Il Louvre Rivoluzionario', files: [ { type:'text', name:'Doc4.txt', src:'media/tema4/tema4.txt' } ] },
   { id: 'tema5',  name: 'Il Louvre Napoleonico', files: [ { type:'text', name:'Doc5.txt', src:'media/tema5/tema5.txt' } ] },
   { id: 'tema6',  name: 'Il Louvre Ottocento–Novecento', files: [ { type:'text', name:'Doc6.txt', src:'media/tema6/tema6.txt' } ] },
