--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -145,8 +145,70 @@ const EPOCHS = [
   
   { id: 'tema4',  name: 'Il Louvre Rivoluzionario', files: [ { type:'text', name:'Doc4.txt', src:'media/tema4/tema4.txt' } ] },
   { id: 'tema5',  name: 'Il Louvre Napoleonico', files: [ { type:'text', name:'Doc5.txt', src:'media/tema5/tema5.txt' } ] },
-  { id: 'tema6',  name: 'Il Louvre Ottocento–Novecento', files: [ { type:'text', name:'Doc6.txt', src:'media/tema6/tema6.txt' } ] },
-  { id: 'tema7',  name: 'Il Grand Louvre', files: [ { type:'text', name:'Doc7.txt', src:'media/tema7/tema7.txt' } ] },
+
+    { id: 'tema6',  name: 'Il Louvre ottocento-novecento', files: [
+      { type:'text',  name:'Doc6.txt', src:'media/tema6/tema6.txt' },
+      { type:'image', name:'Immagine 1', src:'media/tema6/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema6/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema6/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema6/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema6/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema6/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema6/img07.jpg' },
+      { type:'image', name:'Immagine 8', src:'media/tema6/img08.jpg' },
+      { type:'image', name:'Immagine 9', src:'media/tema6/img09.jpg' },
+      { type:'image', name:'Immagine 10', src:'media/tema6/img10.jpg' },
+      { type:'image', name:'Immagine 11', src:'media/tema6/img11.jpg' },
+      { type:'image', name:'Immagine 12', src:'media/tema6/img12.jpg' },
+      { type:'image', name:'Immagine 13', src:'media/tema6/img13.jpg' },
+      { type:'image', name:'Immagine 14', src:'media/tema6/img14.jpg' },
+      { type:'image', name:'Immagine 15', src:'media/tema6/img15.jpg' },
+      { type:'image', name:'Immagine 16', src:'media/tema6/img16.jpg' },
+      { type:'image', name:'Immagine 17', src:'media/tema6/img17.jpg' },
+      { type:'image', name:'Immagine 18,  src:'media/tema6/img18.jpg' },
+      { type:'image', name:'Immagine 19', src:'media/tema6/img19.jpg' },
+      { type:'image', name:'Immagine 20', src:'media/tema6/img20.jpg' },
+      { type:'image', name:'Immagine 21', src:'media/tema6/img21.jpg' },
+      { type:'image', name:'Immagine 22', src:'media/tema6/img22.jpg' },
+      { type:'image', name:'Immagine 23', src:'media/tema6/img23.jpg' },
+      { type:'image', name:'Immagine 24', src:'media/tema6/img24.jpg' },
+      { type:'image', name:'Immagine 25', src:'media/tema6/img25.jpg' },
+      { type:'image', name:'Immagine 26', src:'media/tema6/img26.jpg' },
+      { type:'image', name:'Immagine 27', src:'media/tema6/img27.jpg' },
+      { type:'image', name:'Immagine 28', src:'media/tema6/img28.jpg' },
+      { type:'image', name:'Immagine 29', src:'media/tema6/img29.jpg' },
+      { type:'image', name:'Immagine 30', src:'media/tema6/img30.jpg' },
+      { type:'image', name:'Immagine 31', src:'media/tema6/img31.jpg' },
+      { type:'image', name:'Immagine 32', src:'media/tema6/img32.jpg' },
+      { type:'image', name:'Immagine 33', src:'media/tema6/img33.jpg' },
+
+    
+  ]},
+
+  
+  { id: 'tema7',  name: 'Il Grand Louvre', files: [
+      { type:'text',  name:'Doc7.txt', src:'media/tema7/tema7.txt' },
+      { type:'image', name:'Immagine 1', src:'media/tema7/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema7/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema7/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema7/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema7/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema7/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema7/img07.jpg' },
+      { type:'image', name:'Immagine 8', src:'media/tema7/img08.jpg' },
+      { type:'image', name:'Immagine 9', src:'media/tema7/img09.jpg' },
+      { type:'image', name:'Immagine 10', src:'media/tema7/img10.jpg' },
+      { type:'image', name:'Immagine 11', src:'media/tema7/img11.jpg' },
+      { type:'image', name:'Immagine 12', src:'media/tema7/img12.jpg' },
+      { type:'image', name:'Immagine 13', src:'media/tema7/img13.jpg' },
+      { type:'image', name:'Immagine 14', src:'media/tema7/img14.jpg' },
+      { type:'image', name:'Immagine 15', src:'media/tema7/img15.jpg' },
+      { type:'image', name:'Immagine 16', src:'media/tema7/img16.jpg' },
+      { type:'image', name:'Immagine 17', src:'media/tema7/img17.jpg' }
+    
+  ]},
+
+  
   { id: 'tema8',  name: 'Il Louvre della Gioconda', files: [ { type:'text', name:'Doc8.txt', src:'media/tema8/tema8.txt' } ] },
   { id: 'tema9',  name: 'Il Louvre di Parigi', files: [ { type:'text', name:'Doc9.txt', src:'media/tema9/tema9.txt' } ] },
   { id: 'tema10', name: 'Il Louvre dei Furti', files: [ { type:'text', name:'Doc10.txt', src:'media/tema10/tema10.txt' } ] },
