--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -165,7 +165,7 @@ const EPOCHS = [
       { type:'image', name:'Immagine 15', src:'media/tema6/img15.jpg' },
       { type:'image', name:'Immagine 16', src:'media/tema6/img16.jpg' },
       { type:'image', name:'Immagine 17', src:'media/tema6/img17.jpg' },
-      { type:'image', name:'Immagine 18,  src:'media/tema6/img18.jpg' },
+      { type:'image', name:'Immagine 18', src:'media/tema6/img18.jpg' },
       { type:'image', name:'Immagine 19', src:'media/tema6/img19.jpg' },
       { type:'image', name:'Immagine 20', src:'media/tema6/img20.jpg' },
       { type:'image', name:'Immagine 21', src:'media/tema6/img21.jpg' },
