--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -69,9 +69,9 @@
       <div class="theme-option" data-value="tema6">[ ] Il Louvre Ottocento–Novecento</div>
       <div class="theme-option" data-value="tema7">[ ] Il Grand Louvre</div>
       <div class="theme-option" data-value="tema8">[ ] Il Louvre della Gioconda</div>
-      <div class="theme-option" data-value="tema9">[ ] Il Louvre di Parigi</div>
-      <div class="theme-option" data-value="tema10">[ ] Il Louvre dei Furti</div>
-      <div class="theme-option" data-value="tema11">[ ] Il Louvre della Piramide</div>
+      <div class="theme-option" data-value="tema9">[ ] Il Louvre e la stampa</div>
+      <div class="theme-option" data-value="tema10">[ ] Il Louvre e la guerra</div>
+      <div class="theme-option" data-value="tema11">[ ] Il Louvre e i furti</div>
     </div>
 
     <div class="line">> Firma:</div>
@@ -207,11 +207,49 @@ const EPOCHS = [
       { type:'image', name:'Immagine 17', src:'media/tema7/img17.jpg' }
     
   ]},
-
   
-  { id: 'tema8',  name: 'Il Louvre della Gioconda', files: [ { type:'text', name:'Doc8.txt', src:'media/tema8/tema8.txt' } ] },
-  { id: 'tema9',  name: 'Il Louvre di Parigi', files: [ { type:'text', name:'Doc9.txt', src:'media/tema9/tema9.txt' } ] },
-  { id: 'tema10', name: 'Il Louvre dei Furti', files: [ { type:'text', name:'Doc10.txt', src:'media/tema10/tema10.txt' } ] },
+  { id: 'tema8',  name: 'Il Louvre della Gioconda', files: [
+      { type:'image', name:'Immagine 1', src:'media/tema8/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema8/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema8/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema8/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema8/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema8/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema8/img07.jpg' },
+      { type:'image', name:'Immagine 8', src:'media/tema8/img08.jpg' },
+      { type:'image', name:'Immagine 9', src:'media/tema8/img09.jpg' },
+      { type:'image', name:'Immagine 10', src:'media/tema8/img10.jpg' },
+      { type:'image', name:'Immagine 11', src:'media/tema8/img11.jpg' },
+      { type:'image', name:'Immagine 12', src:'media/tema8/img12.jpg' },
+      { type:'image', name:'Immagine 13', src:'media/tema8/img13.jpg' }    
+  ]},
+
+  { id: 'tema9',  name: 'Il Louvre e la stampa', files: [
+      { type:'image', name:'Immagine 1', src:'media/tema9/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema9/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema9/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema9/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema9/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema9/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema9/img07.jpg' },
+      { type:'image', name:'Immagine 8', src:'media/tema9/img08.jpg' },
+      { type:'image', name:'Immagine 9', src:'media/tema9/img09.jpg' },
+      { type:'image', name:'Immagine 10', src:'media/tema9/img10.jpg' },
+      { type:'video', name:'Video01', src:'media/tema9/vid01.mp4' },
+      { type:'video', name:'Video02', src:'media/tema9/vid02.mp4' },
+      { type:'video', name:'Video03', src:'media/tema9/vid03.mp4' },
+      { type:'video', name:'Video04', src:'media/tema9/vid04.mp4' }
+  ]},
+
+    { id: 'tema10',  name: 'Il Louvre e la guerra', files: [
+      { type:'image', name:'Immagine 1', src:'media/tema10/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema10/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema10/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema10/img04.jpg' },
+      { type:'video', name:'Video01', src:'media/tema10/vid01.mp4' }
+  ]},
+  
+
   { id: 'tema11', name: 'Il Louvre della Piramide', files: [ { type:'text', name:'Doc11.txt', src:'media/tema11/tema11.txt' } ] }
 ];
 
