--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -142,10 +142,25 @@ const EPOCHS = [
   
   ]},
 
+    { id: 'tema4',  name: 'Il Louvre rivoluzionario', files: [
+      { type:'text',  name:'Doc4.txt', src:'media/tema4/tema4.txt' },
+      { type:'image', name:'Immagine 1', src:'media/tema4/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema4/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema4/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema4/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema4/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema4/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema4/img07.jpg' },
+      { type:'image', name:'Immagine 8', src:'media/tema4/img08.jpg' },
+      { type:'image', name:'Immagine 9', src:'media/tema4/img09.jpg' },
+      { type:'image', name:'Immagine 10', src:'media/tema4/img10.jpg' },
+      { type:'image', name:'Immagine 11', src:'media/tema4/img11.jpg' } 
+  ]},
+
   
-  { id: 'tema4',  name: 'Il Louvre Rivoluzionario', files: [ { type:'text', name:'Doc4.txt', src:'media/tema4/tema4.txt' } ] },
   { id: 'tema5',  name: 'Il Louvre Napoleonico', files: [ { type:'text', name:'Doc5.txt', src:'media/tema5/tema5.txt' } ] },
 
+  
     { id: 'tema6',  name: 'Il Louvre ottocento-novecento', files: [
       { type:'text',  name:'Doc6.txt', src:'media/tema6/tema6.txt' },
       { type:'image', name:'Immagine 1', src:'media/tema6/img01.jpg' },
