--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -263,10 +263,14 @@ const EPOCHS = [
       { type:'image', name:'Immagine 4', src:'media/tema10/img04.jpg' },
       { type:'video', name:'Video01', src:'media/tema10/vid01.mp4' }
   ]},
-  
 
-  { id: 'tema11', name: 'Il Louvre della Piramide', files: [ { type:'text', name:'Doc11.txt', src:'media/tema11/tema11.txt' } ] }
-];
+      { id: 'tema11',  name: 'Il Louvre ed i film', files: [
+      { type:'image', name:'Immagine 1', src:'media/tema11/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema11/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema11/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema11/img04.jpg' }
+  ]},
+  
 
 let selectedTheme = null;
 let userData = {};
