--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -71,7 +71,7 @@
       <div class="theme-option" data-value="tema8">[ ] Il Louvre della Gioconda</div>
       <div class="theme-option" data-value="tema9">[ ] Il Louvre e la stampa</div>
       <div class="theme-option" data-value="tema10">[ ] Il Louvre e la guerra</div>
-      <div class="theme-option" data-value="tema11">[ ] Il Louvre e i furti</div>
+      <div class="theme-option" data-value="tema11">[ ] Il Louvre ed i film</div>
     </div>
 
     <div class="line">> Firma:</div>
