--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -270,7 +270,16 @@ const EPOCHS = [
       { type:'image', name:'Immagine 1', src:'media/tema11/img01.jpg' },
       { type:'image', name:'Immagine 2', src:'media/tema11/img02.jpg' },
       { type:'image', name:'Immagine 3', src:'media/tema11/img03.jpg' },
-      { type:'image', name:'Immagine 4', src:'media/tema11/img04.jpg' }
+      { type:'image', name:'Immagine 4', src:'media/tema11/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema11/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema11/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema11/img07.jpg' },
+      { type:'image', name:'Immagine 8', src:'media/tema11/img08.jpg' },
+      { type:'image', name:'Immagine 9', src:'media/tema11/img09.jpg' },
+      { type:'image', name:'Immagine 10', src:'media/tema11/img10.jpg' },
+      { type:'image', name:'Immagine 11', src:'media/tema11/img11.jpg' },
+      { type:'image', name:'Immagine 12', src:'media/tema11/img12.jpg' },
+      { type:'image', name:'Immagine 13', src:'media/tema11/img13.jpg' }
   ]},
   
 ];
