--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -281,6 +281,34 @@ const EPOCHS = [
       { type:'image', name:'Immagine 12', src:'media/tema11/img12.jpg' },
       { type:'image', name:'Immagine 13', src:'media/tema11/img13.jpg' }
   ]},
+
+        { id: 'tema12',  name: 'Disegni', files: [
+      { type:'image', name:'Immagine 1', src:'media/tema12/img01.jpg' },
+      { type:'image', name:'Immagine 2', src:'media/tema12/img02.jpg' },
+      { type:'image', name:'Immagine 3', src:'media/tema12/img03.jpg' },
+      { type:'image', name:'Immagine 4', src:'media/tema12/img04.jpg' },
+      { type:'image', name:'Immagine 5', src:'media/tema12/img05.jpg' },
+      { type:'image', name:'Immagine 6', src:'media/tema12/img06.jpg' },
+      { type:'image', name:'Immagine 7', src:'media/tema12/img07.jpg' },
+      { type:'image', name:'Immagine 8', src:'media/tema12/img08.jpg' },
+      { type:'image', name:'Immagine 9', src:'media/tema12/img09.jpg' },
+      { type:'image', name:'Immagine 10', src:'media/tema12/img10.jpg' },
+      { type:'image', name:'Immagine 11', src:'media/tema12/img11.jpg' },
+      { type:'image', name:'Immagine 12', src:'media/tema12/img12.jpg' },
+      { type:'image', name:'Immagine 13', src:'media/tema12/img13.jpg' },
+      { type:'image', name:'Immagine 14', src:'media/tema12/img14.jpg' },
+      { type:'image', name:'Immagine 15', src:'media/tema12/img15.jpg' },
+      { type:'image', name:'Immagine 16', src:'media/tema12/img16.jpg' },
+      { type:'image', name:'Immagine 17', src:'media/tema12/img17.jpg' },
+      { type:'image', name:'Immagine 18', src:'media/tema12/img18.jpg' },
+      { type:'image', name:'Immagine 19', src:'media/tema12/img19.jpg' },
+      { type:'image', name:'Immagine 20', src:'media/tema12/img20.jpg' },
+      { type:'image', name:'Immagine 21', src:'media/tema12/img21.jpg' },
+      { type:'image', name:'Immagine 22', src:'media/tema12/img22.jpg' },
+      { type:'image', name:'Immagine 23', src:'media/tema12/img23.jpg' },
+      { type:'image', name:'Immagine 24', src:'media/tema12/img24.jpg' },
+      { type:'image', name:'Immagine 25', src:'media/tema12/img25.jpg' }
+  ]},
   
 ];
   
