--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -282,32 +282,29 @@ const EPOCHS = [
       { type:'image', name:'Immagine 13', src:'media/tema11/img13.jpg' }
   ]},
 
-        { id: 'tema12',  name: 'Disegni', files: [
-      { type:'image', name:'Immagine 1', src:'media/tema12/img01.jpg' },
-      { type:'image', name:'Immagine 2', src:'media/tema12/img02.jpg' },
-      { type:'image', name:'Immagine 3', src:'media/tema12/img03.jpg' },
-      { type:'image', name:'Immagine 4', src:'media/tema12/img04.jpg' },
-      { type:'image', name:'Immagine 5', src:'media/tema12/img05.jpg' },
-      { type:'image', name:'Immagine 6', src:'media/tema12/img06.jpg' },
-      { type:'image', name:'Immagine 7', src:'media/tema12/img07.jpg' },
-      { type:'image', name:'Immagine 8', src:'media/tema12/img08.jpg' },
-      { type:'image', name:'Immagine 9', src:'media/tema12/img09.jpg' },
-      { type:'image', name:'Immagine 10', src:'media/tema12/img10.jpg' },
-      { type:'image', name:'Immagine 11', src:'media/tema12/img11.jpg' },
-      { type:'image', name:'Immagine 12', src:'media/tema12/img12.jpg' },
-      { type:'image', name:'Immagine 13', src:'media/tema12/img13.jpg' },
-      { type:'image', name:'Immagine 14', src:'media/tema12/img14.jpg' },
-      { type:'image', name:'Immagine 15', src:'media/tema12/img15.jpg' },
-      { type:'image', name:'Immagine 16', src:'media/tema12/img16.jpg' },
-      { type:'image', name:'Immagine 17', src:'media/tema12/img17.jpg' },
-      { type:'image', name:'Immagine 18', src:'media/tema12/img18.jpg' },
-      { type:'image', name:'Immagine 19', src:'media/tema12/img19.jpg' },
-      { type:'image', name:'Immagine 20', src:'media/tema12/img20.jpg' },
-      { type:'image', name:'Immagine 21', src:'media/tema12/img21.jpg' },
-      { type:'image', name:'Immagine 22', src:'media/tema12/img22.jpg' },
-      { type:'image', name:'Immagine 23', src:'media/tema12/img23.jpg' },
-      { type:'image', name:'Immagine 24', src:'media/tema12/img24.jpg' },
-      { type:'image', name:'Immagine 25', src:'media/tema12/img25.jpg' }
+
+  { id: 'tema12',  name: 'Disegni', files: [
+      { type:'image', name:'Alzato1', src:'media/tema12/Alzato01.jpg' },
+      { type:'image', name:'Alzato2', src:'media/tema12/Alzato02.jpg' },
+      { type:'image', name:'Alzato3', src:'media/tema12/Alzato03.jpg' },
+      { type:'image', name:'Alzato4', src:'media/tema12/Alzato04.jpg' },
+      { type:'image', name:'Alzato5', src:'media/tema12/Alzato05.jpg' },
+      { type:'image', name:'Alzato6', src:'media/tema12/Alzato06.jpg' },
+      { type:'image', name:'Alzato7', src:'media/tema12/Alzato07.jpg' },
+      { type:'image', name:'Alzato8', src:'media/tema12/Alzato08.jpg' },
+      { type:'image', name:'Alzato9', src:'media/tema12/Alzato09.jpg' },
+      { type:'image', name:'Alzato10', src:'media/tema12/Alzato10.jpg' },
+      { type:'image', name:'Pianta1380', src:'media/tema12/Pianta1380.jpg' },
+      { type:'image', name:'Pianta1596', src:'media/tema12/Pianta1596.jpg' },
+      { type:'image', name:'Pianta1756', src:'media/tema12/Pianta1756.jpg' },
+      { type:'image', name:'Pianta1836', src:'media/tema12/Pianta1836.jpg' },
+      { type:'image', name:'Pianta1852', src:'media/tema12/Pianta1852.jpg' },
+      { type:'image', name:'Pianta1885', src:'media/tema12/Pianta1885.jpg' },
+      { type:'image', name:'Pianta1888', src:'media/tema12/Pianta1888.jpg' },
+      { type:'image', name:'Pianta1905', src:'media/tema12/Pianta1905.jpg' },
+      { type:'image', name:'Pianta1910', src:'media/tema12/Pianta1910.jpg' },
+      { type:'image', name:'Pianta1972', src:'media/tema12/Pianta1972.jpg' }
+
   ]},
   
 ];
